Fixed Day 1
Mobile version, text boxes were too small, fixed from 30% to 300px.

--- a/css/style2.css
+++ b/css/style2.css
@@ -130,7 +130,7 @@ h3 {
 }
 
 .signUpBox {
-    width: 30%;
+    width: 300px;
 }
 
 #python {
